# serializer version: 1
# name: test_all_entities[da_ac_air_01011][button.air_filter_reset_hepa_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.air_filter_reset_hepa_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset HEPA filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset HEPA filter',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_hepa_filter',
    'unique_id': 'a5662f73-57d5-ba89-bf44-8b0008b8b2f3_main_custom.hepaFilter_resetHepaFilter',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_air_01011][button.air_filter_reset_hepa_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Air filter Reset HEPA filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.air_filter_reset_hepa_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ks_hood_01001][button.range_hood_reset_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.range_hood_reset_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_hood_filter',
    'unique_id': 'fa5fca25-fa7a-1807-030a-2f72ee0f7bff_main_samsungce.hoodFilter_resetHoodFilter',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_hood_01001][button.range_hood_reset_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Range hood Reset filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.range_hood_reset_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ks_microwave_0101x][button.microwave_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.microwave_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '2bad3237-4886-e699-1b90-4a51a3d55c8a_main_ovenOperatingState_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_microwave_0101x][button.microwave_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Microwave Stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.microwave_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ks_oven_01061][button.oven_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.oven_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '9447959a-0dfa-6b27-d40d-650da525c53f_main_ovenOperatingState_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_oven_01061][button.oven_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Oven Stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.oven_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ks_oven_0107x][button.kitchen_oven_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.kitchen_oven_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '199d7863-ad04-793d-176d-658f10062575_main_ovenOperatingState_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_oven_0107x][button.kitchen_oven_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen oven Stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen_oven_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ks_range_0101x][button.vulcan_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.vulcan_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '2c3cbaa0-1899-5ddc-7b58-9d657bd48f18_main_ovenOperatingState_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_range_0101x][button.vulcan_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Vulcan Stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.vulcan_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ks_walloven_0107x][button.four_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.four_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': '1c77a562-df00-7d6a-ca73-b67f6d4c4607_main_ovenOperatingState_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ks_walloven_0107x][button.four_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Four Stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.four_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ref_normal_000001][button.refrigerator_reset_water_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.refrigerator_reset_water_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset water filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset water filter',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_water_filter',
    'unique_id': '7db87911-7dce-1cf2-7119-b953432a2f09_main_custom.waterFilter_resetWaterFilter',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ref_normal_000001][button.refrigerator_reset_water_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Refrigerator Reset water filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.refrigerator_reset_water_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ref_normal_01001][button.refrigerator_1_reset_water_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.refrigerator_1_reset_water_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset water filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset water filter',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_water_filter',
    'unique_id': '7d3feb98-8a36-4351-c362-5e21ad3a78dd_main_custom.waterFilter_resetWaterFilter',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ref_normal_01001][button.refrigerator_1_reset_water_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Refrigerator 1 Reset water filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.refrigerator_1_reset_water_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_ref_normal_01011][button.frigo_reset_water_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.frigo_reset_water_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset water filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset water filter',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_water_filter',
    'unique_id': '5758b2ec-563e-f39b-ec39-208e54aabf60_main_custom.waterFilter_resetWaterFilter',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ref_normal_01011][button.frigo_reset_water_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Frigo Reset water filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.frigo_reset_water_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_rvc_map_01011][button.robot_vacuum_reset_hepa_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.robot_vacuum_reset_hepa_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset HEPA filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset HEPA filter',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_hepa_filter',
    'unique_id': '01b28624-5907-c8bc-0325-8ad23f03a637_station_custom.hepaFilter_resetHepaFilter',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_rvc_map_01011][button.robot_vacuum_reset_hepa_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Robot Vacuum Reset HEPA filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.robot_vacuum_reset_hepa_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[da_wm_mf_01001][button.filtro_in_microfibra_reset_water_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'button.filtro_in_microfibra_reset_water_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset water filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset water filter',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_water_filter',
    'unique_id': '42e80b4d-24c4-a810-11b3-f90375c56a39_main_custom.waterFilter_resetWaterFilter',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_mf_01001][button.filtro_in_microfibra_reset_water_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Filtro in microfibra Reset water filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.filtro_in_microfibra_reset_water_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
